[gd_scene load_steps=28 format=3 uid="uid://dr7jwchrktwxa"]

[ext_resource type="Script" uid="uid://dkm8l7hojdw4l" path="res://Tests/Xacin/level_end.gd" id="1_utrje"]
[ext_resource type="PackedScene" uid="uid://be3c7t3180orp" path="res://scenes/map_units/grounds/basic_ground.tscn" id="2_utrje"]
[ext_resource type="Texture2D" uid="uid://pl2c6eu5r4nl" path="res://assets/temp(临时美术资源)/ground.png" id="3_utrje"]
[ext_resource type="PackedScene" uid="uid://p6dopje3btqk" path="res://scenes/characters/player/Pipe_player.tscn" id="3_x7syj"]
[ext_resource type="PackedScene" uid="uid://cs3qu0yak2v7l" path="res://Tests/Xacin/start_cutscenes.tscn" id="6_8iol1"]
[ext_resource type="PackedScene" uid="uid://5s2ku8p8nqju" path="res://Tests/Xacin/camera.tscn" id="7_5eabr"]
[ext_resource type="Script" uid="uid://c5smajmv5idc0" path="res://Tests/Xacin/camera_for_end.gd" id="8_q2d32"]
[ext_resource type="Texture2D" uid="uid://bxkpvt0yc46qm" path="res://assets/temp(临时美术资源)/flake_a.png" id="8_utrje"]
[ext_resource type="AudioStream" uid="uid://v8gi65yur448" path="res://assets/temp(临时美术资源)/earthquake.wav" id="9_x7syj"]
[ext_resource type="Texture2D" uid="uid://dihue23a0jt0m" path="res://assets/sprites/map_units/white_block.png" id="10_57rsx"]
[ext_resource type="AudioStream" uid="uid://rr2x6fgm5s6x" path="res://assets/sounds/sfx/flakes.mp3" id="11_q2d32"]
[ext_resource type="AudioStream" uid="uid://biwnn1heqmqrx" path="res://assets/temp(临时美术资源)/hole_open.mp3" id="12_8iol1"]

[sub_resource type="Animation" id="Animation_utrje"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_iv28x"]
resource_name = "far"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(2.0705302, 1),
"update": 0,
"values": [Vector2(570, 328), Vector2(725, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1.8660669, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7syj"]
_data = {
&"RESET": SubResource("Animation_utrje"),
&"far": SubResource("Animation_iv28x")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_8iol1"]
atlas = ExtResource("8_utrje")
region = Rect2(0, 0, 1687, 1571)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eabr"]
atlas = ExtResource("8_utrje")
region = Rect2(1687, 0, 1687, 1571)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r4mb"]
atlas = ExtResource("8_utrje")
region = Rect2(1687, 1571, 1687, 1571)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1hie"]
atlas = ExtResource("8_utrje")
region = Rect2(0, 1571, 1687, 1571)

[sub_resource type="SpriteFrames" id="SpriteFrames_inpn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iol1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eabr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r4mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1hie")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="Animation" id="Animation_57rsx"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../flake_fountain:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1567872, 1.4894972)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../flake_fountain:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2r4mb"]
resource_name = "apear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../flake_fountain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.75686276, 0.75686276, 0.75686276, 0), Color(0.7553861, 0.75538605, 0.75538605, 1)]
}

[sub_resource type="Animation" id="Animation_x7syj"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../flake_fountain:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 0.5, 1),
"transitions": PackedFloat32Array(0.39229202, 1.1892077, 1),
"update": 0,
"values": [Vector2(0.1567872, 1.4894972), Vector2(0.2, 1.489), Vector2(0.1567872, 1.4894972)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../flake_fountain:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.7553861, 0.75538605, 0.75538605, 1), Color(1, 1, 1, 1), Color(0.7135178, 0.7135178, 0.71351784, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2d32"]
_data = {
&"RESET": SubResource("Animation_57rsx"),
&"apear": SubResource("Animation_2r4mb"),
&"new_animation": SubResource("Animation_x7syj")
}

[sub_resource type="Animation" id="Animation_5eabr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 41.063)]
}

[sub_resource type="Animation" id="Animation_8iol1"]
resource_name = "break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3405),
"transitions": PackedFloat32Array(1, 0.07694675),
"update": 0,
"values": [Vector2(0, 41.063), Vector2(20, 41.063)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2r4mb"]
_data = {
&"RESET": SubResource("Animation_5eabr"),
&"break": SubResource("Animation_8iol1")
}

[node name="Level_0" type="Node2D"]
script = ExtResource("1_utrje")

[node name="basic_ground" parent="." instance=ExtResource("2_utrje")]
position = Vector2(-11, 65)

[node name="Sprite2D" type="Sprite2D" parent="basic_ground"]
position = Vector2(1449, 520)
scale = Vector2(37.375008, 15.999999)
texture = ExtResource("3_utrje")

[node name="Sprite2D2" type="Sprite2D" parent="basic_ground"]
position = Vector2(846, 893.99994)
scale = Vector2(117.9375, 31.593746)
texture = ExtResource("3_utrje")

[node name="Sprite2D3" type="Sprite2D" parent="basic_ground"]
position = Vector2(-148, 781)
scale = Vector2(37.375008, 48.625004)
texture = ExtResource("3_utrje")

[node name="Steel_Pipe" parent="." instance=ExtResource("3_x7syj")]

[node name="start_cutscenes" parent="." instance=ExtResource("6_8iol1")]
visible = false
position = Vector2(571, 323)

[node name="camera_for_end" parent="." instance=ExtResource("7_5eabr")]
script = ExtResource("8_q2d32")

[node name="AnimationPlayer" type="AnimationPlayer" parent="camera_for_end"]
libraries = {
&"": SubResource("AnimationLibrary_x7syj")
}

[node name="flake_fountain" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(727, 538.00006)
scale = Vector2(0.1567872, 1.4894972)
sprite_frames = SubResource("SpriteFrames_inpn6")
autoplay = "default"
frame = 3
frame_progress = 0.6133743

[node name="AnimationPlayer" type="AnimationPlayer" parent="flake_fountain"]
root_node = NodePath("../../camera_for_end")
libraries = {
&"": SubResource("AnimationLibrary_q2d32")
}

[node name="hole_background" type="Sprite2D" parent="."]
position = Vector2(723.5, 745.49994)
scale = Vector2(1e-05, 41.063)
texture = ExtResource("10_57rsx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="hole_background"]
libraries = {
&"": SubResource("AnimationLibrary_2r4mb")
}

[node name="earthquake" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_x7syj")
volume_db = 9.37

[node name="flakes" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_q2d32")
parameters/looping = true

[node name="open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8iol1")
volume_db = -6.753
